admin panel created

--- a/views/complaints/add.ejs
+++ b/views/complaints/add.ejs
@@ -9,7 +9,7 @@
                     <input type="text" name="citizenship" id="citizenship" class="form-control" value="<%= typeof (citizenship) != 'undefined' ? citizenship : '' %>" required>
                 </div>
 
-                <div class="form-grop">
+                <div class="form-group">
                     <label for="category">Choose Category</label>
                     <select name="category" class="browser-default custom-select" required>
                         <option value="transport">Transport</option>
