--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,14 +1,14 @@
 <div class="container my-4">
-
-
-
-
     <nav class="navbar navbar-dark primary-color">
         <a class="navbar-brand" href="/" target="_blank">E-Complaints | इलेक्ट्रोनिक उजुरी</a>
+       
+            <% if(isAuthenticated) { %>
+            <span id="logout-btn" class="navbar-text white-text my-0 mr-4">
+                <a href="/users/logout">Logout</a>
+            </span>
+            <% } %>
     </nav>
 
     <hr class="my-5">
-
-
 
 </div>
