--- a/views/partials/_messages.ejs
+++ b/views/partials/_messages.ejs
@@ -1,22 +1,36 @@
 <!-- Joi validation message template -->
 <% if(typeof errors != 'undefined'){ %>
-  <div class="alert alert-warning" role="alert">
+  <div class="alert alert-danger mt-5" role="alert">
       <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
               aria-hidden="true">&times;</span></button>
-      <h4 class="alert-heading"> Error!</h4>
-      <strong>
+      <span>
           <%= errors %>
-      </strong>
+      </span>
   </div>
   <% } %>
 
+
 <!-- Success message template for flash message -->
 <% if(success_msg != ''){ %>
-    <div class="alert alert-info alert-dismissible fade show" role="alert">
+    <div class="alert alert-info alert-dismissible fade show mt-5" role="alert">
       <%= success_msg %>
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
+<% } %> 
+
+
+
+
+ 
+  <!-- Error for worng password-->
+<% if(error != ''){ %>
+  <div class="alert alert-danger alert-dismissible fade show mt-5" role="alert">
+    <%= error %>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
 <% } %> 
 
