--- a/views/admin/forms/staff_register.ejs
+++ b/views/admin/forms/staff_register.ejs
@@ -1,6 +1,6 @@
 
 
-<div class="text-center ">
+<div class="">
     <div class="container">
 
         <form action="/users/register" method="POST">
@@ -14,6 +14,17 @@
                     value="<%= typeof (email) != 'undefined' ? email : '' %>" class="form-control" required />
             </div>
 
+            <div class="form-group">
+                    <label for="category">Department</label>
+                    <select name="department" class="browser-default custom-select" required>
+                        <option value="Transportation">Transportation</option>
+                        <option value="Agriculture">Agriculture</option>
+                        <option value="Health">Health</option>
+                        <option value="Education">Education</option>
+                        <option value="Drinking Water">Drinking Water</option>
+                        <option value="Others">Others</option>
+                    </select>
+                </div>
 
             <div class="form-group">
                 <input type="password" name="password" placeholder="Password"
