--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,37 +1,49 @@
 <%- include('../partials/_header.ejs') %>
 <%- include('../partials/_navbar.ejs') %>
 
-<div class="row p-5 mt-5">
-    <div class="col-md-4"></div>
-    <div class="col-md-4 text-center">
-        <div class="container">
-            <h3 class="text-center mb-3">
-                <i class="fas fa-user-plus"></i> Login Form
-            </h3>
-        
-            <form action="/users/login" method="POST">
-        
-                <div class="form-group">
-                <input type="email" placeholder="Email" name="email" class="form-control"  required />
+<div class="row p-3 mt-5">
+
+    <div class="col-md-6 text-center px-5">
+        <div class="container" style="padding: 0px 100px 0px 100px;">
+
+            <div class="card">
+                <div class="card-header"> <i class="fas fa-user-plus"></i> Login </div>
+
+
+                <div class="card-body">
+                    <form action="/users/login" method="POST">
+
+                        <div class="form-group">
+                            <input type="email" placeholder="Email" name="email" class="form-control" required />
+                        </div>
+
+                        <div class="form-group">
+                            <input type="password" name="password" placeholder="Password" class="form-control"
+                                required />
+                        </div>
+
+
+                        <button class="btn btn-success btn-block" type="submit">Login</button>
+
+                    </form>
                 </div>
-        
-                <div class="form-group">
-                <input type="password" name="password" placeholder="Password" class="form-control"  required />
-                </div>
-        
-        
-                <button class="btn btn-success btn-block" type="submit">Login</button>
-        
-            </form>
-            <p class="lead mt-4">New to Blog?<a href="/users/register"> Register</a></p>
-            <br>
-     
-        
+            </div>
         </div>
 
         <%- include('../partials/_messages.ejs') %>
     </div>
-    <div class="col-md-4"></div>
+
+
+    <div class="col-md-4">
+        <div class="card">
+            <div class="card-header text-danger">
+                <i class="fas fa-exclamation-triangle"></i> Only Authorised Staff Allowed
+            </div>
+            <div class="card-body">
+                Please Provide The Correct Email And Password To Login Staff or System Administrator
+            </div>
+        </div>
+    </div>
 
 </div>
 
