--- a/views/admin/complaints.ejs
+++ b/views/admin/complaints.ejs
@@ -1,12 +1,12 @@
 <%- include('../partials/_header.ejs') %>
 <%- include('../partials/_navbar.ejs') %>
 
-
-
+<div class="alert alert-success" role="alert" style="margin: 10px 50px;">
+        <strong>Welcome To Admin Dashbord !</strong> 
+    </div>
 
 <section id="admin-dashboard">
     <div class="container">
-
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item">
                 <a class="nav-link" id="users-tab" href="/admin/dashboard" role="tab" aria-controls="users"
