--- a/views/officer/dashboard.ejs
+++ b/views/officer/dashboard.ejs
@@ -4,6 +4,9 @@
 <%- include('../partials/_navbar.ejs') %>
 
 
+<div class="alert alert-success" role="alert" style="margin: 10px 50px;">
+    <strong>Welcome To Officer Dashbord !</strong> 
+</div>
 
 <div class="container">
     <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -11,27 +14,24 @@
         <li class="nav-item">
             <a class="nav-link active" id="create-account-tab" data-toggle="tab" href="#create-account" role="tab"
                 aria-controls="create-account" aria-selected="true">
-                <i class="fas fa-tools"></i> Create Accounts</a>
+              <i class="fa fa-user" aria-hidden="true"></i> Respondent Staff</a>
         </li>
 
 
         <li class="nav-item">
-            <a class="nav-link" id="complaints-tab" href="/admin/complaints" role="tab" aria-controls="complaints"
+            <a class="nav-link" id="complaints-tab" href="/officer/complaints" role="tab" aria-controls="complaints"
                 aria-selected="false">
                 <i class="fas fa-envelope-open-text"></i>
                 Complaints</a>
         </li>
 
 
-        <li class="nav-item">
-            <a class="nav-link" id="users-tab" href="/users/display" role="tab" aria-controls="users"
-                aria-selected="true">
-                <i class="fas fa-user-ninja"></i>
-                Users</a>
-        </li>
+  
 
 
     </ul>
+
+    
 </div>
 
 
