--- a/views/admin/forms/admin_register.ejs
+++ b/views/admin/forms/admin_register.ejs
@@ -28,7 +28,7 @@
 
          <input type="text" name="role" value="admin" hidden>
 
-            <button class="btn btn-success btn-block" type="submit">Register</button>
+            <button class="btn btn-primary btn-block" type="submit">Register</button>
 
         </form>
      
