--- a/views/complaints/add.ejs
+++ b/views/complaints/add.ejs
@@ -23,18 +23,18 @@
                     <textarea name="description" class="form-control" id="description" rows="5" required> <%= typeof (description) != 'undefined' ? description : '' %> </textarea>
                 </div>
 
-                <button type="submit" class="btn btn-success btn-block">Send Complaint</button>
+                <button type="submit" class="btn btn-primary btn-block">Send Complaint</button>
             </form>
 
         </div>
 
 
         <div class="col-md-6">
-                <div class="card my-3">
-                    <div class="card-body">
-                        <h4 class="card-title"><a>How To Use It?</a></h4>
-                        <p class="card-text">Type Complaint in the Field ,You Will Receive A Reference ID, which You Will Use To Get Your FeedBack</p>
-                    </div>
+                <div class="card">
+                    
+                        <h4 class="card-header"><a>How To Use ?</a></h4>
+                        <p class="card-body">Type Complaint in the Field ,You Will Receive A Reference ID, which You Will Use To Get Your FeedBack</p>
+                   
                 </div>
 
 
