--- a/views/admin/forms/staff_register.ejs
+++ b/views/admin/forms/staff_register.ejs
@@ -39,7 +39,7 @@
 
          <input type="text" name="role" value="staff" hidden>
 
-            <button class="btn btn-success btn-block" type="submit">Register</button>
+            <button class="btn btn-primary btn-block" type="submit">Register</button>
 
         </form>
      
