--- a/views/feedback/view.ejs
+++ b/views/feedback/view.ejs
@@ -1,39 +1,65 @@
-<div class="container py-5">
+<%- include('../partials/_header.ejs') %>
+<%- include('../partials/_navbar.ejs') %>
 
-    <div class="row">
+
+<div class="container">
+
+  <ul class="nav nav-tabs" id="myTab" role="tablist">
+    <li class="nav-item">
+      <a class="nav-link" id="home-tab" href="/" role="tab" aria-controls="home" aria-selected="true">
+        Complaints</a>
+    </li>
+
+    <li class="nav-item">
+      <a class="nav-link active" id="feedback-tab" data-toggle="tab" href="#feedback" role="tab"
+        aria-controls="feedback" aria-selected="true">
+        Feedback</a>
+    </li>
+  </ul>
+
+
+
+  <div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade show active" id="feedback" role="tabpanel" aria-labelledby="feedback-tab">
+
+      <div class="row py-5">
         <div class="col-md-6">
-            <h5 class="text-dark mb-4">Type or Paste Reference ID into field to get feedback : </h5>
-            <form action="/feedback/view" method="POST">
-                <div class="form-group">
-                    <input type="text" name="complaintId" placeholder="Type Reference ID Here..." class="form-control">
-                </div>
+          <h5 class="text-dark mb-4">Type or Paste Reference ID into field to get feedback : </h5>
 
-                <button type="submit" class="btn btn-success btn-block mb-2">Confirm identity</button>
+          <form action="/feedback/view" method="POST">
+            <div class="form-group">
+              <input type="text" name="complaintId" placeholder="Type Reference ID Here..." class="form-control"
+                required>
+            </div>
 
-            </form>
+            <button type="submit" class="btn btn-primary btn-block mb-2">Confirm identity</button>
+
+          </form>
         </div>
 
         <div class="col-md-6">
-           <% if(complaint) { %>
-            <table class="table table-bordered">
-                <thead class="primary-color text-white">
-                  <tr>
-                    <th scope="col">Status</th>
-                    <th scope="col">Date</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row"> <%= complaint.status %>  </th>
-                    <td><%= complaint.feedback %></td>
-                  </tr>
+          <div class="card">
+            <div class="card-header">Complaint Feedback Status : </div>
+            <div class="card-body">
+              <% if(typeof complaint != 'undefined') { %>
+                  <%- include('../partials/_messages.ejs')%>
                
-                </tbody>
-              </table>
-           
-           <% } %>
-           
+                  <%  if(complaint.status === 'done') {%>
+                    Status : <%= complaint.status%> <hr>
+                    Description : <%= complaint.description%> <hr>
+                    Feedback : <%= complaint.feedback %> <hr>
+                  <% } %>
+
+                  <%  if(complaint.status === 'pending') {%>
+                      Your Complaint Has Not Yet Been Answered Please Wait a bit And Try Again Later 
+                  <% } %>
+                <% } %>
+            </div>
+          </div>
         </div>
-    </div>
+   
 
 </div>
+
+
+<%- include('../partials/_footer.ejs')%>
