--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -23,7 +23,7 @@
                         </div>
 
 
-                        <button class="btn btn-success btn-block" type="submit">Login</button>
+                        <button class="btn btn-primary btn-block" type="submit">Login</button>
 
                     </form>
                 </div>
